# ACTi

./: .gitignore  .gitmodules  README.md
docs/: API-REFERENCE.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  EVAL.md  META_HARNESS.md
platform/eval/: README.md  rubric.yaml
platform/inference/: launch_sglang.sh  launch_sohn.sh
platform/memories/: _sync.py  launch_memory_sync.sh
platform/meta_harness/: claude_wrapper.py  domain_spec.md  meta_harness.py
platform/nginx/: nginx.conf
platform/proxy/: cortex.py  cortex_prompts.py  gateway.py  launch_proxy.sh  library.py  media.py  skills.py  sohn_proxy.py  spark.py  test_tool_call_sanitizer.py  test_user_isolation.py
platform/skills/: _sync.py  launch_skill_sync.sh
platform/status/: launch_status.sh  status.html  (+1 more)
platform/translator/: .env.example  README.md  pyproject.toml
platform/translator/scripts/: smoke.sh
platform/translator/src/sohn_translator/: __init__.py  __main__.py  chunker.py  config.py  extractor.py  memory.py  pipeline.py  retriever.py  schema.py  translator.py  writer.py
platform/translator/src/sohn_translator/prompts/: output_contract.md  unblinded_formula.md
platform/translator/tests/: test_chunker.py  test_memory.py  test_pipeline.py  test_retriever_unit.py  test_translator_stream.py  test_writer.py
scripts/: generate_api_key.sh
startup/: 00_bootstrap.sh  01_install_system.sh  02_install_rocm.sh  03_install_python_env.sh  03b_install_sglang.sh  04_patch_openwebui.sh  05_install_artifacts.sh  06_download_model.sh  07_start_all.sh  README.md  env.example  stop_all.sh
(+33 files in other folders)
